--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 
 <body>
 
-  
+  <header>
+    <h1>Fun Bus</h1>
+    <nav>
+      <li>Home</li>
+      <li>About Us</li>
+      <li>Blog</li>
+      <li>Contact</li>
+    </nav>
+    <img src="img/fun-bus.jpg" alt="The Fun Bus!">
+    <h2>Welcome To The Fun Bus!</h2>
+    <p>Traveling expedition modern, clean webdesign blogger clean webiste theme website modern. Design pretty design. travelblogger adventure WordPress wanderlust theme blogger website expedition theme traveblogger. Adventure fun traveler pretty design website expedition.</p>
+    <hr>
+  </header>
      
   <div class="container home">
    
