--- a/index.html
+++ b/index.html
@@ -17,21 +17,24 @@
 <body>
 
   <header>
-    <h1>Fun Bus</h1>
-    <nav>
-      <li>Home</li>
-      <li>About Us</li>
-      <li>Blog</li>
-      <li>Contact</li>
-    </nav>
-    <img src="img/fun-bus.jpg" alt="The Fun Bus!">
-    <h2>Welcome To The Fun Bus!</h2>
-    <p>Traveling expedition modern, clean webdesign blogger clean webiste theme website modern. Design pretty design. travelblogger adventure WordPress wanderlust theme blogger website expedition theme traveblogger. Adventure fun traveler pretty design website expedition.</p>
-    <hr>
+    <div class="container header-content">
+      <h1>Fun Bus</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
   </header>
      
   <div class="container home">
-   
+    <section class="top-content">
+      <img src="img/fun-bus.jpg" alt="The Fun Bus!">
+      <h2>Welcome To The Fun Bus!</h2>
+      <p>Traveling expedition modern, clean webdesign blogger clean webiste theme website modern. Design pretty design. travelblogger adventure WordPress wanderlust theme blogger website expedition theme traveblogger. Adventure fun traveler pretty design website expedition.</p>
+      <hr>
+    </section>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
